--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="#291b11"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".ui.activities.login.LoginActivity">
 
     <TextView
         android:id="@+id/tvAppName"
