--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:paddingHorizontal="20dp"
     android:background="#291b11"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".ui.login.SignUpActivity">
 
     <TextView
         android:id="@+id/tvAppName"
@@ -15,17 +16,17 @@
         android:fontFamily="@font/festive_regular"
         android:text="@string/app_name"
         android:textColor="#e4e4e4"
-        android:textSize="75sp" />
+        android:textSize="65sp" />
 
     <TextView
-        android:id="@+id/tvSignin"
+        android:id="@+id/tvSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvAppName"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/raleway_variable_font_wght"
-        android:text="@string/sing_in"
+        android:text="SIGN UP"
         android:textColor="#bc834b"
         android:textSize="24sp"
         android:textStyle="bold"/>
@@ -37,8 +38,8 @@
         android:text="@string/username"
         android:textColor="#e4e4e4"
         android:fontFamily="@font/raleway_variable_font_wght"
-        android:layout_marginTop="32dp"
-        android:layout_below="@id/tvSignin"
+        android:layout_marginTop="28dp"
+        android:layout_below="@id/tvSignUp"
         android:textSize="16sp"
         />
     <com.google.android.material.textfield.TextInputEditText
@@ -46,6 +47,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvUsername"
+        android:backgroundTint="#ffffff"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        android:inputType="textPersonName"/>
+
+    <TextView
+        android:id="@+id/tvEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:textColor="#e4e4e4"
+        android:fontFamily="@font/raleway_variable_font_wght"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/etUserName"
+        android:textSize="16sp"
+        />
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/etEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvEmail"
         android:backgroundTint="#ffffff"
         android:textColor="#ffffff"
         android:textSize="16sp"
@@ -58,8 +80,8 @@
         android:text="@string/password"
         android:textColor="#e4e4e4"
         android:fontFamily="@font/raleway_variable_font_wght"
-        android:layout_marginTop="24dp"
-        android:layout_below="@id/etUserName"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/etEmail"
         android:textSize="16sp"
         />
     <com.google.android.material.textfield.TextInputEditText
@@ -73,25 +95,35 @@
         android:inputType="textPassword"/>
 
     <TextView
-        android:id="@+id/tvForgotPassword"
+        android:id="@+id/tvConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/forgot_password"
-        android:textColor="#e7a15c"
+        android:text="Confirm password"
+        android:textColor="#e4e4e4"
         android:fontFamily="@font/raleway_variable_font_wght"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:layout_below="@id/etPassword"
         android:textSize="16sp"
         />
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/etConfirmPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvConfirmPassword"
+        android:backgroundTint="#ffffff"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        android:inputType="textPassword"/>
+
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvForgotPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
-        android:text="SIGN IN"
+        android:layout_below="@id/etConfirmPassword"
+        android:text="SIGN UP"
         android:fontFamily="@font/raleway_variable_font_wght"
         android:textSize="16sp"
         android:width="150dp"
@@ -109,12 +141,12 @@
         android:textSize="16sp"
         android:layout_centerHorizontal="true"
         android:id="@+id/tvOr"
-        android:layout_below="@+id/btnLogin"
-        android:layout_marginTop="20dp"/>
+        android:layout_below="@+id/btnSignUp"
+        android:layout_marginTop="15dp"/>
 
     <LinearLayout
         android:id="@+id/groupIcon"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@id/tvOr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -143,7 +175,8 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvCreateAccount"
+        android:paddingBottom="20dp"
+        android:id="@+id/tvBackSignin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
