bottom nav color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="grey_primary_variant">#BC834B</color>
     <color name="grey_secondary">#CBC1B5</color>
     <color name="text_color">#E4E4E4</color>
+    <color name="grey_opacity60_primary">#60756860</color>
 </resources>
