--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="grey_secondary">#CBC1B5</color>
     <color name="text_color">#E4E4E4</color>
     <color name="grey_opacity60_primary">#60756860</color>
+    <color name="title_text_color">#E7A15C</color>
 </resources>
