--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,12 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:windowTranslucentStatus">true</item>
         <!-- Customize your theme here. -->
+    </style>
 
+    <style name="MyCustomTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="fontFamily">@font/raleway_variable_font_wght</item>
+        <item name="android:fontFamily">@font/raleway_variable_font_wght</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textSize">18sp</item>
     </style>
 </resources>
