--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/grey_primary</item>
         <item name="colorPrimaryVariant">@color/grey_primary_variant</item>
         <item name="colorOnPrimary">@color/text_color</item>
+        <item name="android:textColor">@color/text_color</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/grey_secondary</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -12,7 +13,34 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowBackground">@color/grey_primary</item>
         <!-- Customize your theme here. -->
 
+    </style>
+
+    <style name="RegularText" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="SmallText" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">11sp</item>
+    </style>
+    <style name="CheckBox" parent="Theme.JolieCafe">
+
+    </style>
+    <style name="SmallCheckBox" parent="CheckBox">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">11sp</item>
+    </style>
+    <style name="RegularCheckBox" parent="CheckBox">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="CartViewPadding" parent="Theme.JolieCafe">
+        <item name="android:paddingLeft">13dp</item>
+        <item name="android:paddingRight">13dp</item>
+        <item name="android:paddingTop">17dp</item>
+        <item name="android:paddingBottom">17dp</item>
     </style>
 </resources>
