--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,6 +20,7 @@
         android:layout_alignParentBottom="true">
 
         <RelativeLayout
+            android:id="@+id/sliderHome"
             android:layout_width="match_parent"
             android:layout_height="139dp">
 
@@ -42,8 +43,8 @@
             app:dotsWidthFactor="2.5"
             app:selectedDotColor="@color/grey_primary_variant"
             />
-        </RelativeLayout>
 
+        </RelativeLayout>
     </ScrollView>
 
 </RelativeLayout>
