--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -17,7 +17,7 @@
         android:layout_width="54dp"
         android:layout_height="54dp"
         app:cardCornerRadius="9dp"
-        android:layout_marginRight="12dp">
+        android:layout_marginEnd="12dp">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
