--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,60 @@
     <!-- Base application theme. -->
     <style name="Theme.JolieCafe" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/grey_primary</item>
+        <item name="colorPrimaryVariant">@color/grey_primary_variant</item>
+        <item name="colorOnPrimary">@color/text_color</item>
+        <item name="android:textColor">@color/text_color</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondary">@color/grey_secondary</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
+        <item name="android:windowBackground">@color/grey_primary</item>
         <!-- Customize your theme here. -->
+
+    </style>
+
+    <style name="RegularText" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="SmallText" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+    <style name="BigText" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    <style name="RegularNumber" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="SmallNumber" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+    <style name="BigNumber" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    <style name="CheckBox" parent="Theme.JolieCafe">
+
+    </style>
+    <style name="SmallCheckBox" parent="CheckBox">
+        <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:textSize">11sp</item>
+    </style>
+    <style name="RegularCheckBox" parent="CheckBox">
+        <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="CartViewPadding" parent="Theme.JolieCafe">
+        <item name="android:paddingLeft">13dp</item>
+        <item name="android:paddingRight">13dp</item>
+        <item name="android:paddingTop">17dp</item>
+        <item name="android:paddingBottom">17dp</item>
     </style>
 </resources>
