--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
     <color name="grey_primary_variant">#BC834B</color>
     <color name="grey_secondary">#CBC1B5</color>
     <color name="text_color">#E4E4E4</color>
+    <color name="text_color_2">#E7A15C</color>
+    <color name="dark_text_color">#707070</color>
     <color name="grey_opacity60_primary">#60756860</color>
 </resources>
