--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,30 +11,45 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <item name="android:windowBackground">@color/grey_primary</item>
         <!-- Customize your theme here. -->
 
     </style>
 
     <style name="RegularText" parent="Theme.JolieCafe">
-        <item name="fontFamily">@font/montserrat_regular</item>
-        <item name="android:textSize">14sp</item>
+        <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:textSize">16sp</item>
     </style>
     <style name="SmallText" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+    <style name="BigText" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    <style name="RegularNumber" parent="Theme.JolieCafe">
         <item name="fontFamily">@font/montserrat_regular</item>
-        <item name="android:textSize">11sp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="SmallNumber" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+    <style name="BigNumber" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">24sp</item>
     </style>
     <style name="CheckBox" parent="Theme.JolieCafe">
 
     </style>
     <style name="SmallCheckBox" parent="CheckBox">
-        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="fontFamily">@font/raleway_regular</item>
         <item name="android:textSize">11sp</item>
     </style>
     <style name="RegularCheckBox" parent="CheckBox">
-        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="fontFamily">@font/raleway_regular</item>
         <item name="android:textSize">16sp</item>
     </style>
     <style name="CartViewPadding" parent="Theme.JolieCafe">
