--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,15 +42,16 @@
         android:layout_below="@id/tvSignUp"
         android:textSize="16sp"
         />
+
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/etUserName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvUsername"
         android:backgroundTint="#ffffff"
+        android:inputType="textPersonName"
         android:textColor="#ffffff"
-        android:textSize="16sp"
-        android:inputType="textPersonName"/>
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/tvEmail"
