--- a/app/src/main/res/layout/item_rv_product.xml
+++ b/app/src/main/res/layout/item_rv_product.xml
@@ -1,6 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginHorizontal="12dp"
+    android:layout_marginTop="24dp">
 
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/item_card"
+        android:layout_width="148dp"
+        android:layout_height="223dp"
+        android:elevation="20dp"
+        app:cardBackgroundColor="@color/grey_opacity60_primary"
+        app:cardCornerRadius="9dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="14dp">
+
+
+            <ImageView
+                android:id="@+id/item_img_product"
+                android:layout_width="120dp"
+                android:layout_height="102dp"
+                android:background="@drawable/item_image_custom_bg"
+                android:src="@drawable/e"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_name_product"
+                android:layout_width="101dp"
+                android:layout_height="41dp"
+                android:layout_marginTop="9dp"
+                android:layout_marginEnd="10dp"
+                android:fontFamily="@font/raleway_variable_font_wght"
+                android:text="Sweet Cappuccino"
+                android:textColor="@color/text_color"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/item_img_product" />
+
+            <ImageView
+                android:id="@+id/imageView_product"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginTop="9dp"
+                android:src="@drawable/ic_favorite"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tv_name_product"
+                app:layout_constraintTop_toBottomOf="@+id/item_img_product" />
+
+            <TextView
+                android:id="@+id/tv_categories_product"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/raleway_variable_font_wght"
+                android:textColor="@color/text_color"
+                android:textSize="11sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_name_product" />
+
+            <TextView
+                android:id="@+id/item_price_product"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="9dp"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="@string/item_price"
+                android:textColor="@color/grey_primary_variant"
+                android:textSize="11sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_categories_product" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
