--- a/app/src/main/res/layout/toobar_home.xml
+++ b/app/src/main/res/layout/toobar_home.xml
@@ -10,12 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/btnBackHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:fontFamily="@font/festive_regular"
             android:textColor="@color/white"
+            android:layout_toEndOf="@id/btnBackHome"
             android:textSize="38sp"/>
 
         <ImageView
