--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp"
     android:background="#291b11"
-    tools:context=".ui.activities.login.ForgotPasswordActivity">
+    tools:context=".ui.activities.forgotpassword.ForgotPasswordActivity">
 
     <TextView
         android:id="@+id/tvAppName"
@@ -41,8 +42,7 @@
         android:fontFamily="@font/raleway_variable_font_wght"
         android:layout_marginTop="32dp"
         android:layout_below="@id/tvForgotPassword"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
 
 
 
@@ -55,21 +55,31 @@
         android:fontFamily="@font/raleway_variable_font_wght"
         android:layout_marginTop="32dp"
         android:layout_below="@id/tvIntro"
-        android:textSize="16sp"
-        />
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/etUserName"
+        android:textSize="16sp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/etUserNameLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvGmail"
-        android:backgroundTint="#ffffff"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        android:inputType="textEmailAddress"/>
+        app:boxBackgroundColor="@color/grey_primary"
+        app:boxStrokeColor="@color/box_stroke_color_textinput"
+        app:errorEnabled="true"
+        android:theme="@style/TextInputLayoutAppearance">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etUserName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:inputType="textEmailAddress"
+            android:paddingStart="0dp"
+            android:paddingEnd="0dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_marginTop="44dp"
-        android:layout_below="@+id/etUserName"
+        android:layout_below="@+id/etUserNameLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -97,6 +107,5 @@
             android:text="CONFIRM"
             android:textColor="#ffffff"
             android:textSize="16sp" />
-
     </LinearLayout>
 </RelativeLayout>
