--- a/app/src/main/res/layout/item_cart_suggestion.xml
+++ b/app/src/main/res/layout/item_cart_suggestion.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="130dp"
-    android:layout_height="wrap_content"
+    android:layout_height="223dp"
     android:padding="14dp"
     android:layout_marginEnd="20dp"
     android:background="@drawable/rounded_shape"
@@ -30,14 +30,14 @@
         style="@style/RegularText"
         android:text="Sweet Capucino"
         android:textColor="@color/text_color"
-        android:layout_marginBottom="9dp"/>
+        android:layout_marginBottom="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/SmallText"
         android:text="@string/coffee"
-        android:layout_marginBottom="9dp"/>
+        android:layout_marginBottom="5dp"/>
 
     <TextView
         android:layout_width="wrap_content"
