--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,6 +25,10 @@
 
     <style name="RegularText" parent="Theme.JolieCafe">
         <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    <style name="RegularText2" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/raleway_regular</item>
         <item name="android:textSize">16sp</item>
     </style>
     <style name="SmallText" parent="Theme.JolieCafe">
@@ -36,6 +40,10 @@
         <item name="android:textSize">24sp</item>
     </style>
     <style name="RegularNumber" parent="Theme.JolieCafe">
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    <style name="RegularNumber2" parent="Theme.JolieCafe">
         <item name="fontFamily">@font/montserrat_regular</item>
         <item name="android:textSize">16sp</item>
     </style>
